Update 1. Information Security.md

--- a/1. Information Security.md
+++ b/1. Information Security.md
@@ -216,4 +216,69 @@ The goal is to defend digital infrastructure and secure data against various cyb
 
 ---
 
+# 🔐 **Vulnerability**
+
+A **vulnerability** is a weakness or flaw in software, hardware, or configuration that can be exploited by an attacker to:
+
+* Gain **unauthorized access** 🚫
+* Perform **unauthorized actions** ❌
+* Compromise the **integrity**, **confidentiality**, or **availability** of a system 🛡️
+
+---
+
+## 🛠️ **Exploit Code**
+
+An **exploit** is a script or piece of code written specifically to take advantage of a vulnerability.
+It allows attackers to execute malicious actions by abusing security flaws 🧨.
+
+---
+
+## 🧩 **Common Areas Where Vulnerabilities Exist**
+
+* 🖥️ **Operating Systems**
+* 📦 **Applications**
+* 🌐 **Network Protocols**
+* 💾 **Hardware Components**
+* ⚙️ **Configuration Settings**
+
+---
+
+## 🧨 **Common Types of Vulnerabilities**
+
+### • Buffer Overflow
+
+Occurs when more data is written to a block of memory than it can hold.
+🧠 Can allow attackers to execute arbitrary code on the system.
+
+### • SQL Injection
+
+Inserts malicious SQL code into a query to manipulate a database 🗃️
+🔓 May result in unauthorized access to sensitive information.
+
+### • Cross-Site Scripting (XSS)
+
+Injects malicious scripts into webpages viewed by others 🧪
+🍪 Can steal cookies or impersonate the user.
+
+### • Privilege Escalation
+
+Exploits a flaw to gain **higher-level access** (e.g., admin/root) than authorized 🔓🧑‍💻.
+
+---
+
+## 🛡️ **Mitigation Measures**
+
+### • 🔄 Patching
+
+Regularly update software to fix known vulnerabilities.
+
+### • 🔐 Encryption
+
+Protect sensitive data using cryptographic techniques.
+
+### • 💻 Secure Coding Practices
+
+Write code that avoids security flaws such as buffer overflows, SQL injection, etc.
+
+---
 
