Update 1. Information Security.md

--- a/1. Information Security.md
+++ b/1. Information Security.md
@@ -282,3 +282,86 @@ Write code that avoids security flaws such as buffer overflows, SQL injection, e
 
 ---
 
+# 💣 **Exploit**
+
+An **exploit** is a **tool, software, or code snippet** designed to take advantage of a **bug**, **glitch**, or **vulnerability** in a system to achieve unintended or unauthorized behavior.
+
+It can be:
+
+* A piece of code
+* A sequence of commands
+* A specialized tool
+
+🔓 It is used to:
+
+* Perform **unauthorized actions**
+* Gain **unauthorized access**
+* Cause **unintended system behavior**
+
+Exploits are typically created to target **specific vulnerabilities** and are widely used in **cyberattacks**.
+
+---
+
+## 🧨 **Types of Exploits**
+
+### 1. 🌐 Remote Exploits
+
+Allow an attacker to execute malicious code **over a network** without physical access.
+📌 *Example:* Exploiting a web server vulnerability to run commands remotely.
+
+### 2. 🧍‍♂️ Local Exploits
+
+Require **physical** or **authenticated access** to the target system.
+📌 *Example:* Exploiting a privilege escalation vulnerability to gain admin access.
+
+### 3. 🕳️ Zero-Day Exploits
+
+Target **unknown or unpatched vulnerabilities**.
+🚫 No fix is available at the time because the software vendor is unaware of the flaw.
+
+### 4. 🚫 Denial of Service (DoS) Exploits
+
+Intended to **overwhelm** or **crash** systems/services by flooding them with traffic or consuming resources.
+📌 *Goal:* Make services **unavailable** to legitimate users.
+
+### 5. 🛂 Privilege Escalation Exploits
+
+Allow attackers to **elevate their access level**, often from a normal user to an administrator or root.
+
+---
+
+## 🧪 **Example Exploit Scenario**
+
+### 💥 **SQL Injection Exploit**
+
+An attacker crafts a malicious SQL query and injects it into a vulnerable input field of a web application.
+🎯 This can lead to:
+
+* Bypassing login/authentication 🔑
+* Accessing sensitive data 📂
+* Modifying or deleting database content 🧾
+
+---
+
+## 🛡️ **Mitigation Against Exploits**
+
+### 🔄 Regular Patching
+
+Keep software and systems updated to eliminate known vulnerabilities.
+
+### 🔥 Firewalls & IDS/IPS
+
+Use **firewalls** and **Intrusion Detection/Prevention Systems** to block or detect malicious activities.
+
+### 🔐 Access Control
+
+Implement strict **permissions and access rights** to limit what users and processes can do.
+
+---
+
+> ⚠️ **Note:**
+> Exploits play a **significant role in cyberattacks**.
+> 🧠 **Understanding how exploits work is essential** for securing systems and applications.
+
+---
+
