Update 1. Information Security.md

--- a/1. Information Security.md
+++ b/1. Information Security.md
@@ -612,6 +612,103 @@ Sometimes researchers develop **Proof-of-Concept (PoC)** exploits to:
 
 ---
 
+# 🔍 Vulnerability Assessment
+
+A **methodical process** used to identify, quantify, and prioritize vulnerabilities in systems, applications, and network infrastructures. It helps organizations understand the security weaknesses they face and guides **risk remediation** efforts.
+
+**Vulnerability Assessment** is the process of systematically identifying, classifying, and evaluating security vulnerabilities in systems, networks, and applications. The goal is to find weaknesses that could be exploited by attackers and recommend appropriate mitigation steps.
+
+---
+
+## 🎯 Key Objectives
+
+* Identify known vulnerabilities in systems, software, and configurations.
+* Assess the **risk and impact** of each vulnerability.
+* Provide recommendations for **remediation or mitigation**.
+* Improve overall **security posture**.
+
+---
+
+## 🧩 Steps in a Vulnerability Assessment
+
+### 1. **Asset Discovery**
+
+* Identify all hardware, software, and network components.
+* Understand what needs to be assessed.
+
+### 2. **Vulnerability Scanning**
+
+* Use automated tools to scan systems for known vulnerabilities.
+* **Examples**: Nessus, OpenVAS, Qualys
+
+### 3. **Analysis & Risk Evaluation**
+
+* Prioritize vulnerabilities based on **severity and potential impact**.
+* Use scoring systems like **CVSS (Common Vulnerability Scoring System)**.
+
+### 4. **Reporting**
+
+* Generate a detailed report that includes:
+
+  * Discovered vulnerabilities
+  * Severity
+  * Affected systems
+  * Recommended fixes
+
+### 5. **Remediation**
+
+* Apply patches, reconfigure systems, or take other corrective actions.
+* Reassess to ensure vulnerabilities have been addressed.
+
+---
+
+## 🛠️ Common Tools
+
+* **Nessus**
+* **OpenVAS**
+* **Qualys**
+* **Nmap**
+* **Nikto** (for web applications)
+
+---
+
+## 🧪 Types of Vulnerability Assessments
+
+* **Network-Based**: Scans enterprise networks for open ports and potential vulnerabilities.
+* **Host-Based**: Analyzes servers or workstations for OS or application vulnerabilities.
+* **Application-Based**: Assesses web and software applications for security flaws.
+* **Wireless**: Checks Wi-Fi networks for weak encryption, rogue devices, etc.
+* **Database**: Reviews databases for misconfigurations or outdated versions.
+
+---
+
+## ✅ Benefits
+
+* Early detection of security weaknesses
+* Reduced risk of data breaches or system compromise
+* Compliance with regulations (e.g., PCI DSS, HIPAA)
+* Improved patch management and system hardening
+
+---
+
+## 🔄 Vulnerability Assessment vs. Penetration Testing
+
+| Feature        | Vulnerability Assessment                  | Penetration Testing                      |
+| -------------- | ----------------------------------------- | ---------------------------------------- |
+| **Focus**      | Breadth (find as many issues as possible) | Depth (exploit specific vulnerabilities) |
+| **Tools Used** | Mostly automated scanners                 | Manual + automated                       |
+| **Outcome**    | List of vulnerabilities                   | Proof of exploitability                  |
+| **Frequency**  | Regular / Automated                       | Periodic / Targeted                      |
+
+---
+
+## 🔚 Conclusion
+
+Vulnerability Assessment is a **crucial part** of any cybersecurity strategy. It helps organizations understand their exposure to threats and take **proactive steps** to fix weaknesses before they are exploited by attackers.
+
+---
+
+
 
 
 
