Update 1. Information Security.md

--- a/1. Information Security.md
+++ b/1. Information Security.md
@@ -709,6 +709,100 @@ Vulnerability Assessment is a **crucial part** of any cybersecurity strategy. It
 ---
 
 
+# 🔐 Penetration Testing (Pentesting)
+
+> **Penetration Testing** is a simulated cyberattack on a system, application, or network to test its security posture. It mimics the tactics and tools used by malicious hackers to identify vulnerabilities and assess how far an attacker could go.  
+>  
+> The primary goal is to evaluate security by mimicking real-world attacks and uncovering potential weaknesses **before** malicious hackers do.
+
+---
+
+## 🎯 Objectives of Penetration Testing
+
+- 🔎 Identify security vulnerabilities that could be exploited.
+- 🛡️ Test the effectiveness of security controls and defenses.
+- ⚠️ Assess the impact of successful attacks.
+- 📊 Validate security posture and incident response readiness.
+- 📋 Support compliance with standards (e.g., PCI DSS, ISO 27001).
+
+---
+
+## 🛠️ Pen Testing Process
+
+### 1. 🧠 Planning & Reconnaissance
+- Define scope, goals, and rules of engagement.
+- Perform information gathering (e.g., WHOIS, DNS records, IP ranges).
+
+### 2. 🔍 Scanning
+- Use tools to discover live hosts, open ports, and services.
+- **Types of Scanning**:
+  - 🌐 Network Scanning
+  - 🧪 Vulnerability Scanning
+
+### 3. 🚪 Gaining Access (Exploitation)
+- Exploit discovered vulnerabilities to gain control or escalate privileges.
+- **Examples**: SQL injection, buffer overflow, password cracking.
+
+### 4. 🔐 Maintaining Access
+- Attempt to establish persistence (e.g., backdoors, rootkits) to simulate long-term threat presence.
+
+### 5. 📝 Analysis & Reporting
+- Document vulnerabilities found, methods used, and sensitive data accessed.
+- Provide **remediation recommendations** and **risk ratings**.
+
+### 6. 🔄 Remediation & Retesting
+- Apply patches or configuration changes.
+- Retest to ensure issues have been properly resolved.
+
+---
+
+## 📦 Types of Penetration Testing
+
+| Type                  | Description                                                                 |
+|-----------------------|-----------------------------------------------------------------------------|
+| ⚫ **Black Box**       | Tester has no prior knowledge of the system.                                |
+| ⚪ **White Box**       | Tester has full knowledge, including source code and architecture.          |
+| ⚫⚪ **Gray Box**       | Partial knowledge is shared with the tester.                                |
+| 🌍 **External Testing**| Simulates attacks from outside the organization (e.g., internet-facing).   |
+| 🏢 **Internal Testing**| Simulates insider attacks from within the network.                         |
+| 🌐 **Web App Testing** | Focuses on issues like XSS, SQL injection, CSRF.                            |
+| 📶 **Wireless Testing**| Assesses Wi-Fi networks for weaknesses.                                     |
+| 🎭 **Social Engineering** | Tests human vulnerabilities (e.g., phishing, pretexting).                 |
+
+---
+
+## 🧰 Common Penetration Testing Tools
+
+- 💣 **Metasploit** – Exploitation framework
+- 🕸️ **Burp Suite** – Web application security testing
+- 🌐 **Nmap** – Network scanning and enumeration
+- 🔬 **Wireshark** – Packet analysis
+- 🔐 **John the Ripper / Hashcat** – Password cracking
+- 🧬 **SQLmap** – Automated SQL injection tool
+
+---
+
+## ✅ Benefits of Penetration Testing
+
+- 🧠 Proactively identifies vulnerabilities before attackers do.
+- 📌 Helps prioritize remediation based on real-world risk.
+- 🛡️ Tests effectiveness of current security measures.
+- 📚 Supports compliance and regulatory needs.
+- 🚨 Enhances incident response readiness.
+
+---
+
+## 🔍 Vulnerability Assessment vs. Penetration Testing
+
+| Feature                | Vulnerability Assessment                   | Penetration Testing                        |
+|------------------------|--------------------------------------------|---------------------------------------------|
+| 🎯 **Purpose**         | Identify and list vulnerabilities           | Actively exploit vulnerabilities            |
+| 🔎 **Depth**           | Broad and automated                         | Deep and manual/exploit-based               |
+| ✅ **Risk Verification**| May include false positives                 | Confirms actual exploitability              |
+| 🧰 **Tools**           | Mostly automated scanners                   | Combination of tools and techniques         |
+| 🧠 **Skill Level**     | Moderate                                    | High (ethical hacking expertise required)   |
+
+---
 
 
 
