Update 1. Information Security.md

--- a/1. Information Security.md
+++ b/1. Information Security.md
@@ -14,46 +14,46 @@
 * Destruction
 
 1. **Unauthorized access**
-   🔹 *Hindi:* **अनधिकृत पहुँच**
-   🔹 *Meaning:* जब किसी व्यक्ति को बिना अनुमति के किसी सिस्टम, डेटा, या संसाधन तक पहुँच मिल जाती है।
-   🔹 *Example:* बिना पासवर्ड के किसी का ईमेल खोलना।
+   - *Hindi:* **अनधिकृत पहुँच**
+   - *Meaning:* जब किसी व्यक्ति को बिना अनुमति के किसी सिस्टम, डेटा, या संसाधन तक पहुँच मिल जाती है।
+   - *Example:* बिना पासवर्ड के किसी का ईमेल खोलना।
 
 ---
 
 2. **Disruption**
-   🔹 *Hindi:* **बाधा / अवरोध**
-   🔹 *Meaning:* किसी सेवा, प्रक्रिया या सिस्टम के सामान्य कार्य में हस्तक्षेप करना या उसे रोकना।
-   🔹 *Example:* DDoS अटैक से वेबसाइट की सेवा बाधित हो जाती है।
+   - *Hindi:* **बाधा / अवरोध**
+   - *Meaning:* किसी सेवा, प्रक्रिया या सिस्टम के सामान्य कार्य में हस्तक्षेप करना या उसे रोकना।
+   - *Example:* DDoS अटैक से वेबसाइट की सेवा बाधित हो जाती है।
 
 ---
 
 3. **Modification**
-   🔹 *Hindi:* **परिवर्तन / संशोधन**
-   🔹 *Meaning:* किसी जानकारी या सिस्टम में बदलाव करना।
-   🔹 *Example:* किसी फ़ाइल में बिना अनुमति के डेटा को बदल देना।
+   - *Hindi:* **परिवर्तन / संशोधन**
+   - *Meaning:* किसी जानकारी या सिस्टम में बदलाव करना।
+   - *Example:* किसी फ़ाइल में बिना अनुमति के डेटा को बदल देना।
 
 ---
 
 4. **Inspection**
-   🔹 *Hindi:* **निरीक्षण / जाँच**
-   🔹 *Meaning:* किसी डेटा, नेटवर्क या सिस्टम की जाँच करना, अक्सर सुरक्षा उद्देश्यों से।
-   🔹 *Example:* फ़ायरवॉल द्वारा आने-जाने वाले डेटा का निरीक्षण किया जाता है।
+   - *Hindi:* **निरीक्षण / जाँच**
+   - *Meaning:* किसी डेटा, नेटवर्क या सिस्टम की जाँच करना, अक्सर सुरक्षा उद्देश्यों से।
+   - *Example:* फ़ायरवॉल द्वारा आने-जाने वाले डेटा का निरीक्षण किया जाता है।
 
 ---
 
 5. **Recording**
-   🔹 *Hindi:* **रिकॉर्डिंग / अभिलेखन**
-   🔹 *Meaning:* किसी डेटा, कॉल, गतिविधि या इवेंट को स्टोर करना।
-   🔹 *Example:* सुरक्षा कैमरा वीडियो रिकॉर्ड करता है।
+   - *Hindi:* **रिकॉर्डिंग / अभिलेखन**
+   - *Meaning:* किसी डेटा, कॉल, गतिविधि या इवेंट को स्टोर करना।
+   - *Example:* सुरक्षा कैमरा वीडियो रिकॉर्ड करता है।
 
 The goal is to **safeguard the confidentiality, integrity, and availability** of data.
 
 ---
 
 6. **Destruction**
-   🔹 *Hindi:* **विनाश / नष्ट करना**
-   🔹 *Meaning:* किसी डेटा, सिस्टम या फ़ाइल को पूरी तरह से मिटा देना या समाप्त कर देना।
-   🔹 *Example:* वायरस द्वारा हार्ड डिस्क का डेटा नष्ट कर देना।
+   - *Hindi:* **विनाश / नष्ट करना**
+   - *Meaning:* किसी डेटा, सिस्टम या फ़ाइल को पूरी तरह से मिटा देना या समाप्त कर देना।
+   - *Example:* वायरस द्वारा हार्ड डिस्क का डेटा नष्ट कर देना।
 
 ---
 
