Update 2. Penetration Testing.md

--- a/2. Penetration Testing.md
+++ b/2. Penetration Testing.md
@@ -1,1 +1,67 @@
-dfdf
+
+# 🛡️ Penetration Testing (Pen Testing)
+
+**Penetration Testing** is a simulated cyberattack against a system, application, or network to identify and exploit security vulnerabilities—just like a real attacker would. The goal is to find and fix weaknesses before malicious hackers can exploit them.
+
+---
+
+## ❓ What is Penetration Testing?
+
+Penetration Testing is the practice of evaluating the security of an IT environment by simulating real-world attacks. It is an **authorized and controlled process** carried out by ethical hackers (penetration testers) to:
+
+* 🔍 Identify security flaws
+* ✅ Validate the effectiveness of defenses
+* ⚠️ Understand the potential impact of various attack types
+* 🛠️ Provide recommendations to mitigate risks
+
+---
+
+## 🔑 Why is Penetration Testing Important?
+
+* Finds vulnerabilities **proactively** before attackers do
+* Helps meet **compliance requirements** (e.g., PCI DSS, HIPAA)
+* Validates **security controls** and **patch management**
+* Assesses **incident detection** and **response capabilities**
+* Enhances **security awareness and training**
+
+---
+
+## ⚙️ What Does Penetration Testing Involve?
+
+A typical penetration test includes the following phases:
+
+1. **Planning & Scoping** – Define objectives, rules of engagement, and scope.
+2. **Reconnaissance** – Gather intelligence (both passive and active).
+3. **Scanning** – Identify open ports, services, and potential vulnerabilities.
+4. **Exploitation** – Attempt to exploit discovered vulnerabilities.
+5. **Post-Exploitation** – Assess impact, escalate privileges, pivot within the network.
+6. **Reporting** – Document findings, assess risk, and recommend mitigation steps.
+
+---
+
+## 🧪 Types of Penetration Testing
+
+| Type                     | Focus Area                                         |
+| ------------------------ | -------------------------------------------------- |
+| **Network**              | Internal & external network infrastructure         |
+| **Web Application**      | Web apps and OWASP Top 10 vulnerabilities          |
+| **API**                  | Security of REST/SOAP APIs                         |
+| **Mobile Application**   | iOS and Android mobile apps                        |
+| **Cloud**                | Cloud services & configurations (AWS, Azure, GCP)  |
+| **Social Engineering**   | Phishing, impersonation, and human-based attacks   |
+| **Physical Security**    | Access to buildings, devices, and hardware         |
+| **Wireless**             | Wi-Fi encryption and rogue device detection        |
+| **IoT**                  | Security of smart devices and connected ecosystems |
+| **Desktop Applications** | Local software on endpoints                        |
+| **Red Teaming**          | Full-scale, real-world attack simulation           |
+
+---
+
+## 🔍 Pen Testing Methodologies
+
+* **Black Box** – No internal knowledge; simulates an external attacker.
+* **Gray Box** – Partial knowledge (e.g., credentials); simulates a semi-insider.
+* **White Box** – Full internal knowledge; used for thorough and deep analysis.
+
+---
+
