Update 2. Penetration Testing.md

--- a/2. Penetration Testing.md
+++ b/2. Penetration Testing.md
@@ -41,19 +41,20 @@ A typical penetration test includes the following phases:
 
 ## 🧪 Types of Penetration Testing
 
-| Type                     | Focus Area                                         |
-| ------------------------ | -------------------------------------------------- |
-| **Network**              | Internal & external network infrastructure         |
-| **Web Application**      | Web apps and OWASP Top 10 vulnerabilities          |
-| **API**                  | Security of REST/SOAP APIs                         |
-| **Mobile Application**   | iOS and Android mobile apps                        |
-| **Cloud**                | Cloud services & configurations (AWS, Azure, GCP)  |
-| **Social Engineering**   | Phishing, impersonation, and human-based attacks   |
-| **Physical Security**    | Access to buildings, devices, and hardware         |
-| **Wireless**             | Wi-Fi encryption and rogue device detection        |
-| **IoT**                  | Security of smart devices and connected ecosystems |
-| **Desktop Applications** | Local software on endpoints                        |
-| **Red Teaming**          | Full-scale, real-world attack simulation           |
+| **Type**                     | **Focus Area**                                                                   |
+| ---------------------------- | -------------------------------------------------------------------------------- |
+| **Network**                  | Internal and external network infrastructure (routers, firewalls, switches)      |
+| **Web Application**          | Web applications and OWASP Top 10 vulnerabilities (e.g., XSS, SQLi, CSRF)        |
+| **API**                      | RESTful and SOAP API security, including authentication and data handling        |
+| **Mobile Application**       | iOS and Android app security (local storage, API calls, permissions)             |
+| **Desktop Applications**     | Security of software installed on endpoint systems                               |
+| **Wireless**                 | Wi-Fi networks, encryption protocols, rogue access point detection               |
+| **IoT (Internet of Things)** | Security of smart/embedded devices and their ecosystems                          |
+| **Red Teaming**              | Real-world attack simulation across multiple vectors (physical, digital, social) |
+| **Cloud**                    | Cloud infrastructure (AWS, Azure, GCP), misconfigurations, IAM roles             |
+| **Social Engineering**       | Phishing, pretexting, baiting, impersonation tactics                             |
+| **Physical Security**        | Physical access to systems, hardware, buildings, and restricted areas            |
+
 
 ---
 
