Update 2. Penetration Testing.md

--- a/2. Penetration Testing.md
+++ b/2. Penetration Testing.md
@@ -66,3 +66,140 @@ A typical penetration test includes the following phases:
 
 ---
 
+## 🔍 Types of Penetration Testing – Detailed in Sequence
+
+---
+
+### 1. **Network Penetration Testing**
+
+Focuses on internal and external network infrastructure.
+
+* **Internal Network Testing**
+  Simulates insider threats or compromised internal devices to assess risks within the organization's trusted zone.
+* **External Network Testing**
+  Tests the security of internet-facing systems like firewalls, routers, and servers.
+* **Network + PCI Segmentation Testing**
+  Ensures segmentation complies with PCI DSS to protect cardholder data.
+
+---
+
+### 2. **Web Application Penetration Testing**
+
+Targets web apps for vulnerabilities typically listed in the OWASP Top 10:
+
+* SQL Injection (SQLi)
+* Cross-Site Scripting (XSS)
+* Cross-Site Request Forgery (CSRF)
+* Insecure Deserialization
+* May also include **Web + API testing** to verify backend integration security.
+
+---
+
+### 3. **API Penetration Testing**
+
+Focuses on REST/SOAP APIs for:
+
+* Broken authentication
+* Input validation failures
+* Rate limiting issues
+* Data leakage risks
+
+---
+
+### 4. **Mobile Application Penetration Testing**
+
+Targets iOS and Android mobile apps.
+
+* Looks for:
+
+  * Insecure data storage
+  * Weak session management
+  * Poor encryption
+* Often includes **Mobile + API** testing.
+
+---
+
+### 5. **Desktop Application Penetration Testing**
+
+Tests local software installed on user endpoints.
+
+* Assesses:
+
+  * Buffer overflows
+  * Privilege escalation
+  * Insecure local file storage or weak permissions
+
+---
+
+### 6. **Wireless Network Penetration Testing**
+
+Focuses on Wi-Fi infrastructure:
+
+* Tests for:
+
+  * Weak encryption (e.g., WEP/WPA flaws)
+  * Rogue access points
+  * Inadequate network segmentation
+
+---
+
+### 7. **IoT Penetration Testing**
+
+Targets smart and connected devices.
+
+* Evaluates:
+
+  * Default credentials
+  * Lack of firmware updates
+  * Insecure communication protocols
+
+---
+
+### 8. **Red Teaming**
+
+A full-scope simulated attack replicating an **Advanced Persistent Threat (APT)**.
+
+* Combines:
+
+  * Social engineering
+  * Technical exploitation
+  * Physical intrusion
+* Tests detection and response capabilities of blue teams.
+
+---
+
+### 9. **Cloud Penetration Testing**
+
+Focuses on cloud environments like AWS, Azure, GCP.
+
+* Identifies:
+
+  * Misconfigured services
+  * Poor IAM policies
+  * Publicly exposed assets
+* Includes **Cloud Configuration Testing** like firewall rules, S3 permissions.
+
+---
+
+### 10. **Social Engineering & Phishing Testing**
+
+Simulates human-targeted attacks:
+
+* Email phishing
+* Vishing (voice calls)
+* Pretexting (impersonation)
+  Assesses employee awareness and training effectiveness.
+
+---
+
+### 11. **Physical Penetration Testing**
+
+Tests the physical security of premises and hardware:
+
+* Unauthorized facility access
+* Badge cloning
+* Tailgating
+  Evaluates real-world access controls.
+
+---
+
