Update 2. Penetration Testing.md

--- a/2. Penetration Testing.md
+++ b/2. Penetration Testing.md
@@ -192,7 +192,15 @@ Simulates human-targeted attacks:
 
 ---
 
-### 11. **Physical Penetration Testing**
+### 11. Threat Modeling & Security Hardening
+    
+    * Threat Modeling:** Identifies potential attack vectors early in the design process.
+    * Security Hardening:** Configures systems to reduce attack surfaces and eliminate unnecessary services.
+
+---
+
+
+### 12. **Physical Penetration Testing**
 
 Tests the physical security of premises and hardware:
 
@@ -200,6 +208,7 @@ Tests the physical security of premises and hardware:
 * Badge cloning
 * Tailgating
   Evaluates real-world access controls.
-
 ---
+
+
 
