Update 2. Penetration Testing.md

--- a/2. Penetration Testing.md
+++ b/2. Penetration Testing.md
@@ -193,8 +193,8 @@ Simulates human-targeted attacks:
 ---
 
 ### 11. Threat Modeling & Security Hardening
-* Threat Modeling:** Identifies potential attack vectors early in the design process.
-* Security Hardening:** Configures systems to reduce attack surfaces and eliminate unnecessary services.
+* **Threat Modeling:** Identifies potential attack vectors early in the design process.
+* **Security Hardening:** Configures systems to reduce attack surfaces and eliminate unnecessary services.
 
 ---
 
