Update 3. Penetration Testing Methodologies.md

--- a/3. Penetration Testing Methodologies.md
+++ b/3. Penetration Testing Methodologies.md
@@ -8,10 +8,10 @@ Penetration testing can be conducted using various approaches depending on the d
 ### 🕵️ **Black Box Testing**
 
 * **Description:**
-  The tester has no prior knowledge of the internal systems, architecture, or credentials.
+  The tester has **no prior knowledge** of the internal systems, architecture, or credentials.
 
 * **Use Case:**
-  Simulates an external attacker trying to breach the system from the outside.
+  Simulates an **external attacker** trying to breach the system from the outside.
 
 * **Focus Areas:**
   Perimeter defenses, firewall configurations, public-facing applications.
@@ -21,10 +21,10 @@ Penetration testing can be conducted using various approaches depending on the d
 ### 🧩 **Gray Box Testing**
 
 * **Description:**
-  The tester has limited internal knowledge, such as user-level credentials or partial architecture diagrams.
+  The tester has **limited internal knowledge**, such as user-level credentials or partial architecture diagrams.
 
 * **Use Case:**
-  Mimics an insider threat or a malicious user with some access (e.g., compromised user account).
+  Mimics an **insider threat** or a malicious user with some access (e.g., compromised user account).
 
 * **Focus Areas:**
   Session handling, privilege escalation, business logic flaws.
@@ -34,10 +34,10 @@ Penetration testing can be conducted using various approaches depending on the d
 ### 🧠 **White Box Testing**
 
 * **Description:**
-  The tester has full access to system documentation, source code, configurations, and internal architecture.
+  The tester has **full access** to system documentation, source code, configurations, and internal architecture.
 
 * **Use Case:**
-  Used for in-depth security reviews, such as secure code audits and configuration validation.
+  Used for **in-depth security reviews**, such as secure code audits and configuration validation.
 
 * **Focus Areas:**
   Code-level vulnerabilities, misconfigurations, logic flaws, secure development practices.
