Update 4. Phases of Penetration Testing.md

--- a/4. Phases of Penetration Testing.md
+++ b/4. Phases of Penetration Testing.md
@@ -98,3 +98,39 @@ Penetration testing is a structured process used to identify, exploit, and docum
 ### 🧭 Summary Flow:
 ```bash
 Planning → Reconnaissance → Vulnerability Analysis → Exploitation → Post-Exploitation → Reporting → (Optional) Retesting
+````
+
+---
+
+## ⚔️ Hacking vs Penetration Testing
+
+| Phase              | Malicious Hacking               | Ethical Penetration Testing |
+| ------------------ | ------------------------------- | --------------------------- |
+| Reconnaissance     | Info gathering (passive/active) | Reconnaissance              |
+| Scanning           | Identify open ports/services    | Vulnerability Analysis      |
+| Gaining Access     | Exploit vulnerabilities         | Exploitation                |
+| Maintaining Access | Install backdoors, pivot        | Post-Exploitation           |
+| Covering Tracks    | Delete logs, hide traces        | ❌ Not performed ethically   |
+
+---
+
+## 🛠️ Common Tools by Phase
+
+| Phase               | Tools Used                                     |
+| ------------------- | ---------------------------------------------- |
+| Reconnaissance      | theHarvester, Maltego, Shodan, FOCA            |
+| Scanning & Analysis | Nmap, Nessus, OpenVAS, Nikto                   |
+| Exploitation        | Metasploit, SQLMap, Burp Suite, Custom Scripts |
+| Post-Exploitation   | Mimikatz, BloodHound, PowerView                |
+| Reporting           | Dradis, Serpico, Markdown, Screenshot tools    |
+
+---
+
+## 👨‍💻 Notable Figures & References
+
+* **Kevin Mitnick** – *Ghost in the Wires* (pioneer of social engineering).
+* **Edward Snowden** – NSA whistleblower (security and surveillance ethics).
+* **Mr. Robot** – TV series showing realistic hacking and social engineering.
+
+---
+
