--- a/3. Penetration Testing Methodologies.md
+++ b/3. Penetration Testing Methodologies.md
@@ -5,7 +5,7 @@ Penetration testing can be conducted using various approaches depending on the d
 
 ---
 
-### 🕵️ **Black Box Testing**
+###  **Black Box Testing**
 
 * **Description:**
   The tester has **no prior knowledge** of the internal systems, architecture, or credentials.
@@ -18,7 +18,7 @@ Penetration testing can be conducted using various approaches depending on the d
 
 ---
 
-### 🧩 **Gray Box Testing**
+###  **Gray Box Testing**
 
 * **Description:**
   The tester has **limited internal knowledge**, such as user-level credentials or partial architecture diagrams.
@@ -31,7 +31,7 @@ Penetration testing can be conducted using various approaches depending on the d
 
 ---
 
-### 🧠 **White Box Testing**
+###  **White Box Testing**
 
 * **Description:**
   The tester has **full access** to system documentation, source code, configurations, and internal architecture.
@@ -43,4 +43,20 @@ Penetration testing can be conducted using various approaches depending on the d
   Code-level vulnerabilities, misconfigurations, logic flaws, secure development practices.
 
 ---
+
+### 🔍 **Black Box vs Gray Box vs White Box Testing**
+
+| Aspect             | Black Box Testing                      | Gray Box Testing                             | White Box Testing                                  |
+|--------------------|----------------------------------------|----------------------------------------------|----------------------------------------------------|
+| Knowledge of System | No internal knowledge                 | Partial internal knowledge                   | Full internal knowledge                            |
+| Access Level        | External attacker perspective         | Limited access (e.g., credentials, docs)     | Full access (e.g., source code, admin rights)      |
+| Testing Focus       | Functionality and external behavior   | External behavior + limited internal logic   | Internal structure, logic, and implementation      |
+| Tester Role         | Unauthenticated user / outsider       | Authenticated user or insider                | Developer, security analyst, or internal tester    |
+| Use Case            | Real-world attack simulation          | Insider threat or semi-trusted users         | Code audits, secure development lifecycle          |
+| Advantages          | Closely mimics real-world scenario    | Balanced trade-off between realism & insight | Comprehensive and thorough                         |
+| Limitations         | May miss internal flaws or logic issues | May not have full system visibility         | Less realistic from an attacker perspective        |
+| Example Tools       | Nmap, Burp Suite, Nikto               | OWASP ZAP, Metasploit (with creds)           | Static code analyzers, debuggers, source review    |
+
+---
+
 
