Update 3. Penetration Testing Methodologies.md

--- a/3. Penetration Testing Methodologies.md
+++ b/3. Penetration Testing Methodologies.md
@@ -59,4 +59,24 @@ Penetration testing can be conducted using various approaches depending on the d
 
 ---
 
+###  Summary: Black Box vs Gray Box vs White Box Testing**
+
+- **Black Box Testing**  
+  Simulates an external attack without internal knowledge.  
+  Great for identifying surface-level vulnerabilities and mimicking real-world threats.
+
+- **Gray Box Testing**  
+  Tester has limited knowledge (e.g., user credentials, documentation).  
+  This hybrid approach allows for deeper analysis while still retaining realism.
+
+- **White Box Testing**  
+  Complete access to source code and system internals.  
+  Ideal for uncovering logic flaws, backdoors, insecure coding practices, and deep vulnerabilities.
+
+**💡 Tip:**  
+- Use **Black Box** when simulating an outsider attack.  
+- Use **Gray Box** when testing as a user or semi-trusted insider.  
+- Use **White Box** when reviewing code for internal vulnerabilities.
+
+---
 
